# BoQtPlayer

./: .gitignore  BoData.cpp  BoData.h  BoLog.cpp  BoLog.h  BoOpenGLWidget.cpp  BoOpenGLWidget.h  BoParameter.cpp  BoParameter.h  BoThread.cpp  BoThread.h  BoThreadBase.cpp  BoThreadBase.h  BoUtil.cpp  BoUtil.h  CMakeLists.txt  FFDecode.cpp  FFDecode.h  FFDecoder.cpp  FFDecoder.h  FFDemux.cpp  FFDemux.h  FFParameter.cpp  FFParameter.h  FFQtFrameDispathcer.cpp  FFQtFrameDispathcer.h  FFQtPlayer.cpp  FFQtPlayer.h  FFQtPlayerBuilder.cpp  FFQtPlayerBuilder.h  FFResampler.cpp  FFResampler.h  FrameDispatcher.cpp  FrameDispatcher.h  IAudioPlayer.h  IDecode.cpp  IDecode.h  IDecoder.cpp  IDecoder.h  IDemux.cpp  (+14 more)
Data/: BoAVFrameData.cpp  BoAVFrameData.h  BoAVPacketData.cpp  BoAVPacketData.h  BoAudioData.cpp  BoAudioData.h  IBoData.cpp  IBoData.h
Dependency/: CMakeLists.txt
Dependency/ffmpeg/lib/: libavcodecd.lib  libavdeviced.lib  libavfilterd.lib  libavformatd.lib  libavutild.lib  libpostprocd.lib  libswresampled.lib  libswscaled.lib
Interface/: IAudioPlayer.cpp  IAudioPlayer.h  IDecoder.cpp  IDecoder.h  IDemux.cpp  IDemux.h  IFrameDispatcher.cpp  IFrameDispatcher.h  IObserver.h  IParameter.cpp  IParameter.h  IPlayer.cpp  IPlayer.h  IPlayerBuilder.cpp  IPlayerBuilder.h  IResampler.cpp  IResampler.h  ISubject.cpp  ISubject.h  IVideoView.cpp  IVideoView.h
OpenGLRender/: ElapsedTimer.cpp  ElapsedTimer.h  IRenderWorker.cpp  IRenderWorker.h  OpenGLMesh.cpp  OpenGLMesh.h  OpenGLQuad.cpp  OpenGLQuad.h  OpenGLRenderWidget.cpp  OpenGLRenderWidget.h  OpenGLRenderingThread.cpp  OpenGLRenderingThread.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLViewportTarget.cpp  OpenGLViewportTarget.h  OpenGLWidget.cpp  OpenGLWidget.h  YUVRenderWorker.cpp  YUVRenderWorker.h
OpenGLRender/Renderer/: IOpenGLRenderer.h  IRendererFactory.h  OpenGLQuad.cpp  OpenGLQuad.h  OpenGLQuadFactory.cpp  OpenGLQuadFactory.h  YUVRenderer.cpp  YUVRenderer.h  YUVRendererFactory.cpp  YUVRendererFactory.h
